# qtlogger

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cmake/: FindQt5.cmake  qt-add-executable.cmake  qt-add-library.cmake  qt-find-moc-headers.cmake  use-doxygen.cmake  use-qt4.cmake  use-qt5.cmake
data/: .qtlogger-rc  qtlogger-default-rc
include/: qtlogger.h
include/utils/logging/: qtlogger.h
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  ansi-colors.h  logger-private.h  logger.cpp  logger.h  qtlogger-handler.h
src/tests/: CMakeLists.txt
src/tests/test-app/: CMakeLists.txt  main.cpp
src/utility/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt
src/utils/udp-reader/: CMakeLists.txt  main.cpp
